2016-02-19  Tobias Brox  <tobias@redpill-linpro.com>
	* thrash-protect.py: misc minor stuff since last release, including some code cleanup, some error handling, better logging; much of it pulled in from other forks (sorry, I'm too lazy to do a proper job creating the missing ChangeLog entries).

2014-12-18  Tobias Brox  <tobias@redpill-linpro.com>
        * thrash-protect.py: some refactoring, plus now it will STOP a parent bash process before stopping the child, not to disrupt the job control
        * tests/test_thrash_protect.py: more unit tests and a small functional test
        * tests/thrash_bot2.py: now with argparse (though, that requires 2.7) and made compatible with python3.

2014-12-09  Tobias Brox  <tobias@redpill-linpro.com>
        * thrash-protect.py: started work on solving the annoying bash job control interpherence ... if suspending a bash child, make sure the parent process is already suspended.
	* test/test_thrash_protect: first unit tests are coming up

2014-11-20  Tobias Brox  <tobias@redpill-linpro.com>
        * thrash-protect.py: major refactoring, cleaning up quite some mess and getting rid of quite some globals
        * thrash-protect.py: fixed a bug - when thrash_protect kicks in, it will at first almost always freeze a pid and then unfreeze it immediately afterwards without any sleep

2014-03-10  Tobias Brox  <tobias@redpill-linpro.com>
        * thrash-protect.py: found a silly print statement left behind from earlier debug rounds.
	* thrash-protect.py: bumped the version (patchlevel)

2014-02-26  Tobias Brox  <tobias@redpill-linpro.com>
	* README.md - elaborated a bit on the drawbacks/problems observed
	* thrash-protect.py (thrash_protect): doing a best-effort on running mlockall()

2014-01-14  Tobias Brox  <tobias@redpill-linpro.com>
	* general: version number bump - there shouldn't have been any 0.6.4, it should have been released as 0.7.
	* README.md: some minor docfixes