@@ -1,3 +1,6 @@
+2016-02-22  Tobias Brox  <tobias@redpill-linpro.com>
+        * archlinux/ The AUR setup has been changed quite a bit, the PKGBUILD was buggy.  Version 0.11.1 only contains changes to the arch linux package management
+
 2016-02-19  Tobias Brox  <tobias@redpill-linpro.com>
 	* thrash-protect.py: misc minor stuff since last release, including some code cleanup, some error handling, better logging; much of it pulled in from other forks (sorry, I'm too lazy to do a proper job creating the missing ChangeLog entries).
 
